k8s/my-canary-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-canary-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-canary-deployment
  template:
    metadata:
      name:  my-canary-deployment-pod-1
      labels:
        app: my-canary-deployment
        version: v0.1
    spec:
      containers:
      - image: zforman/my_canary_deployment:v0.1
        name: my-canary-deployment-container
        ports:
        - containerPort: 5000
