k8s/my-canary-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-canary-deployment-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-canary-deployment
  template:
    metadata:
      name:  my-canary-deployment-pod-2
      labels:
        app: my-canary-deployment
        version: v0.2
    spec:
      containers:
      - image: zforman/my_canary_deployment:v0.2
        name: my-canary-deployment-container
        ports:
        - containerPort: 5000
