k8s/my-canary-deployment-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-canary-deployment
    version: v0.1
  name: my-canary-deployment-1-svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: my-canary-deployment
  type: LoadBalancer
