k8s/my-canary-deployment-2-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-canary-deployment-2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: canary
    nginx.ingress.kubernetes.io/canary-weight: "40"

spec:
 rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: my-canary-deployment-2-svc
          servicePort: 5000
